# veyra

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  BUILD_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRESH_INSTALL.md  HARDWARE_VALIDATION.md  INSTALLATION.md  PROGRESS.md  README.md  RELEASE_AUDIT.md  RELEASE_NOTES.md  ROADMAP.md  Run.txt  SECURITY.md  TROUBLESHOOTING.md  VERIFY.md  Veyra_Claude_Backend_Prompt.md
apps/veyra-apo/: CMakeLists.txt  VeyraApo.cpp  VeyraApo.def  VeyraApo.h  VeyraMicApo.cpp  VeyraMicApo.h  dllmain.cpp  veyra-apo.rc
apps/veyra-overlay/: CMakeLists.txt  main.cpp  veyra-overlay.rc
apps/veyra-service/: ApoPublisher.cpp  ApoPublisher.h  AudioBridge.cpp  AudioBridge.h  BridgeAudioUtil.h  CMakeLists.txt  ConfigDsp.h  ConfigManager.cpp  ConfigManager.h  ControlServer.cpp  ControlServer.h  CrashHandler.cpp  CrashHandler.h  DeviceNotifier.h  MicBridge.cpp  MicBridge.h  MicPublisher.cpp  MicPublisher.h  PresetLibrary.cpp  PresetLibrary.h  ServiceInstaller.cpp  ServiceInstaller.h  ServiceMain.cpp  ServiceMain.h  ServiceRuntime.cpp  ServiceRuntime.h  SleepTimerService.cpp  SleepTimerService.h  TrackerService.cpp  TrackerService.h  UpdaterClient.cpp  UpdaterClient.h  main.cpp  veyra-service.exe.manifest  veyra-service.rc
apps/veyra-setup-helper/: CMakeLists.txt  main.cpp  veyra-setup-helper.rc
apps/veyra-ui/: CMakeLists.txt  veyra.exe.manifest  veyra.rc
apps/veyra-ui/Source/: AppIndex.cpp  AppIndex.h  AppRuleWatcher.cpp  AppRuleWatcher.h  AudioDevices.cpp  AudioDevices.h  DefaultEndpoint.h  HotkeyManager.cpp  HotkeyManager.h  Main.cpp  MiniWindow.cpp  MiniWindow.h  RootComponent.cpp  RootComponent.h  ServiceClient.cpp  ServiceClient.h  SoundLabEngine.cpp  SoundLabEngine.h  TrayIcon.h  VeyraGui.h
apps/veyra-ui/Source/Components/: EqBandSlider.cpp  EqBandSlider.h  GlassPanel.h  IconButton.h  InfoIcon.h  Knob.cpp  Knob.h  ParametricEqEditor.cpp  ParametricEqEditor.h  SegmentedControl.cpp  SegmentedControl.h  ToggleSwitch.cpp  ToggleSwitch.h
apps/veyra-ui/Source/Graphics/: Glass.h  GlassBackground.cpp  GlassBackground.h  GlassCard.cpp  GlassCard.h  Icons.h
apps/veyra-ui/Source/Home/: EqualizerCard.cpp  EqualizerCard.h  Sidebar.cpp  Sidebar.h  TopBar.cpp  TopBar.h  VisualizerCard.cpp  VisualizerCard.h
apps/veyra-ui/Source/Screens/: AppsScreen.cpp  AppsScreen.h  CrashBanner.cpp  CrashBanner.h  DevicesScreen.cpp  DevicesScreen.h  EffectsScreen.cpp  EffectsScreen.h  GalleryComponent.cpp  GalleryComponent.h  GamerModeScreen.cpp  GamerModeScreen.h  HomeScreen.cpp  HomeScreen.h  OnboardingOverlay.cpp  OnboardingOverlay.h  PlaceholderScreen.h  PresetsScreen.cpp  PresetsScreen.h  SettingsScreen.cpp  SettingsScreen.h  SoundLabScreen.cpp  SoundLabScreen.h
apps/veyra-ui/Source/Theme/: DesignTokens.cpp  DesignTokens.h  Fonts.cpp  Fonts.h  Motion.h  ThemeManager.h  VeyraLookAndFeel.cpp  VeyraLookAndFeel.h
modules/veyra-common/: CMakeLists.txt
modules/veyra-common/include/veyra/: AppRules.h  AutoEq.h  Config.h  CrashReport.h  DeviceProfiles.h  GameDetector.h  HearingTest.h  Hotkeys.h  Localization.h  Logging.h  Paths.h  Preset.h  RateLimiter.h  ThemeTokens.h  Updater.h  version.h.in
modules/veyra-common/src/: AppRules.cpp  AutoEq.cpp  Config.cpp  ConfigJson.h  CrashReport.cpp  DeviceProfiles.cpp  GameDetector.cpp  Hotkeys.cpp  Localization.cpp  Logging.cpp  Paths.cpp  Preset.cpp  ThemeTokens.cpp  Updater.cpp  version.cpp
modules/veyra-common/src/ipc/: PipeClient.cpp  PipeIo.cpp  PipeServer.cpp  SharedMemory.cpp
modules/veyra-dsp/: CMakeLists.txt
modules/veyra-dsp/include/analyzer/: Analyzer.h  Fft.h  MeasureBands.h  SpscRingBuffer.h
modules/veyra-dsp/include/chain/: DspChain.h  DspParameters.h  SmoothedValue.h
modules/veyra-dsp/include/dynamics/: Compressor.h  Limiter.h
modules/veyra-dsp/include/enhancers/: BassEnhancer.h  DelayLine.h  Exciter.h  FieldCompensation.h  HeadphoneSafe.h  MultibandWidth.h  Reverb.h  Saturator.h  StereoProcessor.h  ToneControls.h  TransientShaper.h
modules/veyra-dsp/include/eq/: Biquad.h  GraphicEq.h  ParametricEq.h
modules/veyra-dsp/include/lab/: SignalGenerator.h
modules/veyra-dsp/include/loudness/: EqualLoudness.h  LoudnessMeter.h  LoudnessNormalizer.h  NightMode.h  SleepFade.h  SleepTimer.h  TruePeakMeter.h
modules/veyra-dsp/include/routing/: OutputRouter.h
modules/veyra-dsp/include/scene/: SceneDetector.h
modules/veyra-dsp/include/spatial/: Convolver.h  Crossfeed.h  HrirInterp.h  Hrtf.h  HrtfDatabase.h  RoomSimulator.h  VirtualSurround.h  WavReader.h
modules/veyra-dsp/include/tracker/: DirectionEstimator.h  FeatureExtractor.h  SoundTracker.h  (+2 more)
modules/veyra-rnnoise/: CMakeLists.txt
modules/veyra-rnnoise/src/: RnnoiseDenoiser.cpp
tests/: CMakeLists.txt
tests/common_tests/: test_analyzer_data.cpp  test_app_rules.cpp  test_appearance_config.cpp  test_autoeq.cpp  test_bridge_config.cpp  test_crash_report.cpp  test_device_profiles.cpp  test_game_detector.cpp  test_gamer_config.cpp  test_hearing_test.cpp  test_hotkeys.cpp  test_localization.cpp  test_loudness_config.cpp  test_presets.cpp  test_rnnoise.cpp  test_sharing_config.cpp  test_spatial_config.cpp  test_theme_tokens.cpp  test_tracker_data.cpp  test_updater.cpp  test_voice_config.cpp
tests/dsp_tests/: TestHelpers.h  test_aec.cpp  test_agc.cpp  test_analyzer.cpp  test_bass_enhancer.cpp  test_chain.cpp  test_chain_parametric.cpp  test_core.cpp  test_delayline.cpp  test_dynamics.cpp  test_eq_stereo.cpp  test_equal_loudness.cpp  test_exciter.cpp  test_field_comp.cpp  test_headphone_safe.cpp  test_hrir_interp.cpp  test_hrtf_kemar.cpp  test_lab_loudness.cpp  test_limiter_truepeak.cpp  test_loudness.cpp  test_measure_bands.cpp  test_multiband_width.cpp  test_output_router.cpp  test_parametric_eq.cpp  test_performance.cpp  test_reference_mode.cpp  test_reverb.cpp  test_room_sim.cpp  test_saturation.cpp  test_scene_detector.cpp  test_shared_params.cpp  test_sleep_timer.cpp  test_spatial.cpp  test_tracker.cpp  test_transient.cpp  test_truepeak_norm.cpp  test_virtual_surround.cpp  test_voice.cpp
(+51 files in other folders)
